# fastapi_fitness_tracker

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
app/: dependencies.py  exception_handler.py  logging_config.py  main.py  middleware.py  tasks.py
app/api/: main.py
app/api/routes/: auth.py  goals.py  utils.py  workouts.py
app/core/: config.py  database.py  security.py
app/crud/: goals.py  users.py  workouts.py
app/models/: base.py  goals.py  users.py  workouts.py
app/schemas/: auth.py  base.py  goals.py  users.py  workouts.py
app/schemes/: base.py
app/utils/: date_tz.py  email_service.py  text.py  validators.py
